src/snapshots/sel__parse__test-25.snap
---
source: src/parse.rs
expression: "t(b\"use :path: name]}] 42\")"
---
(
    Top {
        uses: [
            Use {
                loc_use: Location(
                    "<test>",
                    0..3,
                ),
                loc_path: Location(
                    "<test>",
                    4..10,
                ),
                path: "path",
                loc_prefix: Location(
                    "<test>",
                    11..15,
                ),
                prefix: "name",
            },
        ],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Number {
                            loc: Location(
                                "<test>",
                                19..21,
                            ),
                            number: 42.0,
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                0..3,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        15..16,
                    ),
                    Unexpected {
                        token: CloseBracket,
                        expected: "a ',' (because of prior 'use')",
                    },
                ),
                because: Unmatched {
                    open_token: Use,
                },
            },
        ),
    ],
)
