src/snapshots/sel__parse__test-26.snap
---
source: src/parse.rs
expression: "t(b\"def name :desc: 12]}] 42\")"
---
(
    Top {
        uses: [],
        defs: [
            Def {
                loc_def: Location(
                    "<test>",
                    0..3,
                ),
                loc_name: Location(
                    "<test>",
                    4..8,
                ),
                name: "name",
                loc_desc: Location(
                    "<test>",
                    9..15,
                ),
                desc: "desc",
                to: Apply {
                    base: Value(
                        Number {
                            loc: Location(
                                "<test>",
                                16..18,
                            ),
                            number: 12.0,
                        },
                    ),
                    args: [],
                },
            },
        ],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Number {
                            loc: Location(
                                "<test>",
                                22..24,
                            ),
                            number: 42.0,
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                0..3,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        18..19,
                    ),
                    Unexpected {
                        token: CloseBracket,
                        expected: "a ',' (because of prior 'def')",
                    },
                ),
                because: Unmatched {
                    open_token: Def,
                },
            },
        ),
    ],
)
