src/snapshots/sel__parse__test-3.snap
---
source: src/parse.rs
expression: "t(b\"- 2\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                0..1,
                            ),
                            word: "-",
                        },
                    ),
                    args: [
                        Number {
                            loc: Location(
                                "<test>",
                                2..3,
                            ),
                            number: 2.0,
                        },
                    ],
                },
                tail: [],
            },
        ),
    },
    [],
)
