src/snapshots/sel__parse__test-31.snap
---
source: src/parse.rs
expression: "t(b\"[subscr without closing\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Subscr {
                            loc_open: Location(
                                "<test>",
                                0..1,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Value(
                                        Word {
                                            loc: Location(
                                                "<test>",
                                                1..7,
                                            ),
                                            word: "subscr",
                                        },
                                    ),
                                    args: [
                                        Word {
                                            loc: Location(
                                                "<test>",
                                                8..15,
                                            ),
                                            word: "without",
                                        },
                                        Word {
                                            loc: Location(
                                                "<test>",
                                                16..23,
                                            ),
                                            word: "closing",
                                        },
                                    ],
                                },
                                tail: [],
                            },
                            loc_close: Location(
                                "<test>",
                                23..23,
                            ),
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [
        Error(
            Location(
                "<test>",
                0..1,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        23..23,
                    ),
                    Unexpected {
                        token: End,
                        expected: "next argument or closing ']'",
                    },
                ),
                because: Unmatched {
                    open_token: OpenBracket,
                },
            },
        ),
    ],
)
