src/snapshots/sel__parse__test-4.snap
---
source: src/parse.rs
expression: "t(b\"2 -\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Number(
                            2.0,
                        ),
                    ),
                    args: [
                        Word(
                            "-",
                        ),
                    ],
                },
                tail: [],
            },
        ),
    },
    [],
)
