src/snapshots/sel__parse__test-5.snap
---
source: src/parse.rs
expression: "t(b\"-, split:-:, map[tonum, add1, tostr], join:+:\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                0,
                                0..1,
                            ),
                            word: "-",
                        },
                    ),
                    args: [],
                },
                tail: [
                    (
                        Location(
                            0,
                            1..2,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        3..8,
                                    ),
                                    word: "split",
                                },
                            ),
                            args: [
                                Bytes {
                                    loc: Location(
                                        0,
                                        8..11,
                                    ),
                                    bytes: [
                                        45,
                                    ],
                                },
                            ],
                        },
                    ),
                    (
                        Location(
                            0,
                            11..12,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        13..16,
                                    ),
                                    word: "map",
                                },
                            ),
                            args: [
                                Subscr {
                                    loc_open: Location(
                                        0,
                                        16..17,
                                    ),
                                    subscr: Script {
                                        head: Apply {
                                            base: Value(
                                                Word {
                                                    loc: Location(
                                                        0,
                                                        17..22,
                                                    ),
                                                    word: "tonum",
                                                },
                                            ),
                                            args: [],
                                        },
                                        tail: [
                                            (
                                                Location(
                                                    0,
                                                    22..23,
                                                ),
                                                Apply {
                                                    base: Value(
                                                        Word {
                                                            loc: Location(
                                                                0,
                                                                24..27,
                                                            ),
                                                            word: "add",
                                                        },
                                                    ),
                                                    args: [
                                                        Number {
                                                            loc: Location(
                                                                0,
                                                                27..28,
                                                            ),
                                                            number: 1.0,
                                                        },
                                                    ],
                                                },
                                            ),
                                            (
                                                Location(
                                                    0,
                                                    28..29,
                                                ),
                                                Apply {
                                                    base: Value(
                                                        Word {
                                                            loc: Location(
                                                                0,
                                                                30..35,
                                                            ),
                                                            word: "tostr",
                                                        },
                                                    ),
                                                    args: [],
                                                },
                                            ),
                                        ],
                                    },
                                    loc_close: Location(
                                        0,
                                        35..36,
                                    ),
                                },
                            ],
                        },
                    ),
                    (
                        Location(
                            0,
                            36..37,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        38..42,
                                    ),
                                    word: "join",
                                },
                            ),
                            args: [
                                Bytes {
                                    loc: Location(
                                        0,
                                        42..45,
                                    ),
                                    bytes: [
                                        43,
                                    ],
                                },
                            ],
                        },
                    ),
                ],
            },
        ),
    },
    [],
)
