src/snapshots/sel__parse__test-6.snap
---
source: src/parse.rs
expression: "t(b\"tonum, add234121, tostr, ln\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                0,
                                0..5,
                            ),
                            word: "tonum",
                        },
                    ),
                    args: [],
                },
                tail: [
                    (
                        Location(
                            0,
                            5..6,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        7..10,
                                    ),
                                    word: "add",
                                },
                            ),
                            args: [
                                Number {
                                    loc: Location(
                                        0,
                                        10..16,
                                    ),
                                    number: 234121.0,
                                },
                            ],
                        },
                    ),
                    (
                        Location(
                            0,
                            16..17,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        18..23,
                                    ),
                                    word: "tostr",
                                },
                            ),
                            args: [],
                        },
                    ),
                    (
                        Location(
                            0,
                            23..24,
                        ),
                        Apply {
                            base: Value(
                                Word {
                                    loc: Location(
                                        0,
                                        25..27,
                                    ),
                                    word: "ln",
                                },
                            ),
                            args: [],
                        },
                    ),
                ],
            },
        ),
    },
    [],
)
