src/snapshots/sel__parse__test-7.snap
---
source: src/parse.rs
expression: "t(b\"[tonum, add234121, tostr] :13242:\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Subscr {
                            loc_open: Location(
                                "<test>",
                                0..1,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Value(
                                        Word {
                                            loc: Location(
                                                "<test>",
                                                1..6,
                                            ),
                                            word: "tonum",
                                        },
                                    ),
                                    args: [],
                                },
                                tail: [
                                    (
                                        Location(
                                            "<test>",
                                            6..7,
                                        ),
                                        Apply {
                                            base: Value(
                                                Word {
                                                    loc: Location(
                                                        "<test>",
                                                        8..11,
                                                    ),
                                                    word: "add",
                                                },
                                            ),
                                            args: [
                                                Number {
                                                    loc: Location(
                                                        "<test>",
                                                        11..17,
                                                    ),
                                                    number: 234121.0,
                                                },
                                            ],
                                        },
                                    ),
                                    (
                                        Location(
                                            "<test>",
                                            17..18,
                                        ),
                                        Apply {
                                            base: Value(
                                                Word {
                                                    loc: Location(
                                                        "<test>",
                                                        19..24,
                                                    ),
                                                    word: "tostr",
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                ],
                            },
                            loc_close: Location(
                                "<test>",
                                24..25,
                            ),
                        },
                    ),
                    args: [
                        Bytes {
                            loc: Location(
                                "<test>",
                                26..33,
                            ),
                            bytes: [
                                49,
                                51,
                                50,
                                52,
                                50,
                            ],
                        },
                    ],
                },
                tail: [],
            },
        ),
    },
    [],
)
