src/snapshots/sel__parse__test-8.snap
---
source: src/parse.rs
expression: "t(b\"{repeat 1, {}}\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        List(
                            [
                                Apply {
                                    base: Value(
                                        Word(
                                            "repeat",
                                        ),
                                    ),
                                    args: [
                                        Number(
                                            1.0,
                                        ),
                                    ],
                                },
                                Apply {
                                    base: Value(
                                        List(
                                            [],
                                            None,
                                        ),
                                    ),
                                    args: [],
                                },
                            ],
                            None,
                        ),
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
