src/snapshots/sel__parse__test-9.snap
---
source: src/parse.rs
expression: "t(b\"{repeat 1,, {}}\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        List {
                            loc_open: Location(
                                0,
                                0..1,
                            ),
                            items: [
                                Apply {
                                    base: Value(
                                        Word {
                                            loc: Location(
                                                0,
                                                1..7,
                                            ),
                                            word: "repeat",
                                        },
                                    ),
                                    args: [
                                        Number {
                                            loc: Location(
                                                0,
                                                8..9,
                                            ),
                                            number: 1.0,
                                        },
                                    ],
                                },
                            ],
                            rest: Some(
                                (
                                    Location(
                                        0,
                                        10..11,
                                    ),
                                    Apply {
                                        base: Value(
                                            List {
                                                loc_open: Location(
                                                    0,
                                                    12..13,
                                                ),
                                                items: [],
                                                rest: None,
                                                loc_close: Location(
                                                    0,
                                                    13..14,
                                                ),
                                            },
                                        ),
                                        args: [],
                                    },
                                ),
                            ),
                            loc_close: Location(
                                0,
                                14..15,
                            ),
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
