src/snapshots/sel__parse__test.snap
---
source: src/parse.rs
expression: "t(b\"\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: None,
    },
    [],
)
